# winfuzz

./: .gitignore  BUILD_SUCCESS_SUMMARY.md  CMakeLists.txt  ENHANCEMENT_SUMMARY.md  LICENSE  README.md  USAGE_GUIDE.md  build.bat  build.sh  build_enhanced.bat  build_enhanced.sh  config.json  config_template.conf  dictionary.txt
corpus/: sample_config.json  sample_http_request.txt  sample_path.txt
examples/: CMakeLists.txt  api_fuzzing_example.cpp  driver_fuzzing_example.cpp
include/: winuzzf.h
src/: cli_ui.cpp  cli_ui.h  main.cpp  utils.cpp
src/core/: CMakeLists.txt  fuzzer_impl.cpp  fuzzer_impl.h
src/corpus/: CMakeLists.txt  corpus_manager.cpp  corpus_manager.h
src/coverage/: CMakeLists.txt  coverage_collector.cpp  coverage_collector.h
src/crash/: CMakeLists.txt  crash_analyzer.cpp  crash_analyzer.h
src/logging/: CMakeLists.txt  logger.cpp  logger.h
src/mutators/: CMakeLists.txt  mutator.cpp  mutator.h
src/sandbox/: CMakeLists.txt  sandbox.cpp  sandbox.h
src/targets/: CMakeLists.txt  targets.cpp
tests/: CMakeLists.txt  test_main.cpp  test_mutators.cpp  test_runner.cpp  test_targets.cpp
tools/: CMakeLists.txt  corpus_analyzer.cpp  crash_minimizer.cpp
